[package]
name = "cui_gaming"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.1"
itertools = "0.8.2"
num = "0.2.1"
unicode-width = "0.1.7"
data_structure = {path = "../data_structure"}
geometry = {path = "../geometry"}
